--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,17 +11,17 @@
       </svg>
     </a>
 
-  <load src="partials/nav.html" />
+    <load src="partials/nav.html" />
 
-  <button
-    type="button"
-    aria-label="Open menu"
-    class="burger-menu"
-    onclick="toggleMenu('open')"
-  >
-    <svg class="burger-menu-icon">
-      <use href="./img/icons/sprites.svg#burger"></use>
-    </svg>
-  </button>
-  <!-- </div> -->
+    <button
+      type="button"
+      aria-label="Open menu"
+      class="burger-menu"
+      onclick="toggleMenu('open')"
+    >
+      <svg class="burger-menu-icon">
+        <use href="./img/icons/sprites.svg#burger"></use>
+      </svg>
+    </button>
+  </div>
 </header>
