--- a/src/css/favorite.css
+++ b/src/css/favorite.css
@@ -1,11 +1,9 @@
 .favorites {
-    padding-top: 80px;
     padding-bottom: 80px;
 }
 
 @media screen and (min-width: 768px) {
     .favorites {
-        padding-top: 100px;
         padding-bottom: 100px;
          
     }
@@ -13,9 +11,7 @@
 
 @media screen and (min-width: 1440px) {
     .favorites {
-        padding-top: 90px;
         padding-bottom: 51px;
-
     }
 }
 
@@ -48,30 +44,6 @@
         margin-top: 16px;
     }
 }
-
-.favorites-container {
-    min-width: 320px;
-    max-width: 480px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 0 auto;
-}
-
-@media screen and (min-width: 768px) {
-    .favorites-container {
-        max-width: 768px;
-        padding-left: 32px;
-        padding-right: 32px;  
-    }  
-}
-
-@media screen and (min-width: 1440px) {
-    .favorites-container {
-        max-width: 1440px;
-        padding-left: 32px;
-        padding-right: 32px;
-    }
- }
 
 @media screen and (min-width: 1440px) {
     .quote-conteiner {
@@ -368,7 +340,7 @@ right: 20px;
     font-size: 16px;
 }
 
-.exersise-header {
+.exercise-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -449,7 +421,7 @@ margin-right: 10px;
     color: #242424;
 }
 
-.exercice-information {
+.exercise-information {
     display: flex;
     justify-content:space-between;
     margin-top: 16px;
