--- a/src/partials/favorite.html
+++ b/src/partials/favorite.html
@@ -1,6 +1,6 @@
 <main>
   <section class="favorites">
-    <div class="favorites-container">
+    <div class="container">
       <h1 class="favorites-tittle">Favorites</h1>
 
       <div class="favorites-thumb">
@@ -28,7 +28,7 @@
             </div>
           </div>
 
-          <div class="features-container">
+          <div class="container">
             <div class="features">
               <div class="features-content">
                 <svg width="20" height="20">
