--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,88 +1,86 @@
 <body>
-  <header>
-    <section class="HeroSection">
-      <div class="HeroContent">
-        <div class="decorative-icon">
-          <svg width="38" height="38">
-            <use href="./img/icons/sprites.svg#icon-star"></use>
-          </svg>
-        </div>
-        <h1 class="hero-title">Get <span>Body</span> in shape, Stay healthy</h1>
-        <p class="hero-text">
-          Transform your physique and embrace a healthier lifestyle with our
-          comprehensive fitness and nutrition support.
-        </p>
-        <div class="HeroTags">
-          <button class="tag">#Sport</button>
-          <button class="tag">#Healthy</button>
-          <button class="tag">#Workout</button>
-          <button class="tag">#Diet</button>
-        </div>
+  <section class="HeroSection">
+    <div class="HeroContent">
+      <div class="decorative-icon">
+        <svg width="38" height="38">
+          <use href="./img/icons/sprites.svg#icon-star"></use>
+        </svg>
       </div>
-
-      <!-- Вибір зображення для різних екранів -->
-      <div class="HeroImage">
-        <picture>
-          <source
-            media="(min-width: 1024px)"
-            srcset="
-              ./img/hero/desktop-1x.webp 1x,
-              ./img/hero/desktop-2x.webp 2x,
-              ./img/hero/desktop-3x.webp 3x
-            "
-            type="image/webp"
-          />
-          <source
-            media="(min-width: 1024px)"
-            srcset="
-              ./img/hero/desktop-1x.jpg 1x,
-              ./img/hero/desktop-2x.jpg 2x,
-              ./img/hero/desktop-3x.jpg 3x
-            "
-            type="image/jpeg"
-          />
-          <source
-            media="(min-width: 768px)"
-            srcset="
-              ./img/hero/tablet-1x.webp 1x,
-              ./img/hero/tablet-2x.webp 2x,
-              ./img/hero/tablet-3x.webp 3x
-            "
-            type="image/webp"
-          />
-          <source
-            media="(min-width: 768px)"
-            srcset="
-              ./img/hero/tablet-1x.jpg 1x,
-              ./img/hero/tablet-2x.jpg 2x,
-              ./img/hero/tablet-3x.jpg 3x
-            "
-            type="image/jpeg"
-          />
-          <source
-            srcset="
-              ./img/hero/mobile-1x.webp 1x,
-              ./img/hero/mobile-2x.webp 2x,
-              ./img/hero/mobile-3x.webp 3x
-            "
-            type="image/webp"
-          />
-          <source
-            srcset="
-              ./img/hero/mobile-1x.jpg 1x,
-              ./img/hero/mobile-2x.jpg 2x,
-              ./img/hero/mobile-3x.jpg 3x
-            "
-            type="image/jpeg"
-          />
-          <img
-            src="./img/hero/desktop-1x.jpg"
-            alt="Two people high-fiving during a workout"
-          />
-        </picture>
+      <h1 class="hero-title">Get <span>Body</span> in shape, Stay healthy</h1>
+      <p class="hero-text">
+        Transform your physique and embrace a healthier lifestyle with our
+        comprehensive fitness and nutrition support.
+      </p>
+      <div class="HeroTags">
+        <button class="tag">#Sport</button>
+        <button class="tag">#Healthy</button>
+        <button class="tag">#Workout</button>
+        <button class="tag">#Diet</button>
       </div>
-    </section>
-  </header>
+    </div>
 
-  <script src="./js/hero.js"></script>
+    <!-- Вибір зображення для різних екранів -->
+    <div class="HeroImage">
+      <picture>
+        <source
+          media="(min-width: 1024px)"
+          srcset="
+            ./img/hero/desktop-1x.webp 1x,
+            ./img/hero/desktop-2x.webp 2x,
+            ./img/hero/desktop-3x.webp 3x
+          "
+          type="image/webp"
+        />
+        <source
+          media="(min-width: 1024px)"
+          srcset="
+            ./img/hero/desktop-1x.jpg 1x,
+            ./img/hero/desktop-2x.jpg 2x,
+            ./img/hero/desktop-3x.jpg 3x
+          "
+          type="image/jpeg"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./img/hero/tablet-1x.webp 1x,
+            ./img/hero/tablet-2x.webp 2x,
+            ./img/hero/tablet-3x.webp 3x
+          "
+          type="image/webp"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ./img/hero/tablet-1x.jpg 1x,
+            ./img/hero/tablet-2x.jpg 2x,
+            ./img/hero/tablet-3x.jpg 3x
+          "
+          type="image/jpeg"
+        />
+        <source
+          srcset="
+            ./img/hero/mobile-1x.webp 1x,
+            ./img/hero/mobile-2x.webp 2x,
+            ./img/hero/mobile-3x.webp 3x
+          "
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./img/hero/mobile-1x.jpg 1x,
+            ./img/hero/mobile-2x.jpg 2x,
+            ./img/hero/mobile-3x.jpg 3x
+          "
+          type="image/jpeg"
+        />
+        <img
+          src="./img/hero/desktop-1x.jpg"
+          alt="Two people high-fiving during a workout"
+        />
+      </picture>
+    </div>
+  </section>
+
+  <!-- <script type="module" src="./js/hero.js"></script> -->
 </body>
